<resources>
    <string name="app_name">一起来装修</string>
    <string name="text_cancel">取消</string>
    <string name="text_guide">让我们花10秒钟了解你\n以便发现您最需要的装修内容</string>
    <string name="text_sex">选择性别：</string>
    <string name="text_choose_birthday">选择生日：</string>
    <string name="main_title_city">城市</string>
    <string name="P_cream_chooseby">精选自%1$s</string>
    <string name="comment_count">评论（%1$d）</string>
    <string name="P_appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="text_head_title_serch">搜索用户/帖子</string>
    <string name="seek_quxiao">取消</string>
    <string name="activity_seek_text">搜索更多内容</string>
    <string name="seek_user_name">用户</string>
    <string name="seek_search_posts">帖子</string>
    <string name="main_title_fitment_text">装修公司</string>
    <string name="fitment_text_baojia1">677元/m.</string>
    <string name="fitment_text_laofang">老房整装</string>
    <string name="fitment_text_baojia2">677+117元/m.</string>
    <string name="fitment_text_xinfang">新房整装</string>
    <string name="look_sit">看现场</string>
    <string name="yiqi_group">一起团队</string>
    <string name="site_playing">工地直播</string>
    <string name="zhuangxiuzhibo">装修直播</string>
    <string name="text_linked_to_bbs"><![CDATA[精选自北京装修论坛>]]></string>
    <string name="liked_count">赞(%1$d)</string>
    <string name="reply_count">回帖（%1$d）</string>
    <string name="yuyue">我要预约</string>
    <string name="dayi">在线答疑</string>
    <string name="team_gridview_text_case">装修案例：</string>
    <string name="asof_the_date">报名截止日期：</string>
    <string name="fenxiang">分享</string>
    <string name="baoming">立即报名</string>
    <string name="pretty_interspace_text">空间</string>
    <string name="pretty_style_text">风格</string>
    <string name="pretty_locality_text">局部</string>
    <string name="pretty_color_text">颜色</string>
    <string name="home_activity_fisttext">建材</string>
    <string name="home_activity_sendText">家具</string>
    <string name="home_activity_thirdText">电器</string>
    <string name="home_activity_fourText">整房套装</string>
</resources>
