<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:showDividers="middle"
    android:divider="@drawable/main_fengexian"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/fitment_look_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/look_site_playing_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/look_sit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/fitment_site_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/site_playing_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/site_playing" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/fitment_yiqi_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/yiqi_group_icon" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yiqi_group" />
    </LinearLayout>


</LinearLayout>