<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--引导界面-->
    <TextView
        android:id="@id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_devide"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/little_gray"
        android:text="@string/text_guide"
        android:gravity="center"/>
    <RadioGroup
        android:id="@id/radio_sex"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sex"/>
        <RadioButton
            android:padding="7dp"
            android:button="@drawable/selector_checked"
            android:layout_marginLeft="5dp"
            android:text="男"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:textSize="15sp"
            android:padding="7dp"
            android:button="@drawable/selector_checked"
            android:layout_marginLeft="10dp"
            android:text="女"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RadioGroup>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/little_gray"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_choose_birthday"/>
        <DatePicker
            android:id="@+id/datePicker"
            android:calendarViewShown="false"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/little_gray"/>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="装修阶段："
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@id/radio_state"
            >
            <RadioButton
                android:textSize="15sp"
                android:padding="7dp"
                android:button="@drawable/selector_checked"
                android:text="正在装修"
                android:textColor="@color/selector_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:textSize="15sp"
                android:padding="7dp"
                android:button="@drawable/selector_checked"
                android:text="计划装修 今年 明年 后年"
                android:textColor="@color/selector_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:textSize="15sp"
                android:padding="7dp"
                android:button="@drawable/selector_checked"
                android:text="已经入住"
                android:textColor="@color/selector_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioButton
                android:textSize="15sp"
                android:padding="7dp"
                android:button="@drawable/selector_checked"
                android:text="暂无计划"
                android:textColor="@color/selector_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RadioGroup>
    </LinearLayout>
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/little_gray"/>
    <Button
        android:id="@+id/btn_goto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="进入一起装修"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>


</LinearLayout>