<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_title_fitment"></include>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/huise" />

    <com.cjj.MaterialRefreshLayout
        android:id="@id/refreshlayout_activity"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@mipmap/site_selected_icon"
                        android:paddingTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_activity_fisttext" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/huise" />

                <com.bwf.aiyiqi.view.MyGridView
                    android:id="@id/home_first_gridview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="3"
                    android:scrollbars="none"></com.bwf.aiyiqi.view.MyGridView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/huise" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@mipmap/site_selected_icon"
                        android:paddingTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_activity_sendText" />
                </LinearLayout>

                <com.bwf.aiyiqi.view.MyGridView
                    android:id="@id/home_send_gridview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="3"
                    android:scrollbars="none" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/huise" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@mipmap/site_selected_icon"
                        android:paddingTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_activity_thirdText" />
                </LinearLayout>

                <com.bwf.aiyiqi.view.MyGridView
                    android:id="@id/home_third_gridview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="3"
                    android:scrollbars="none" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/huise" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@mipmap/site_selected_icon"
                        android:paddingTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_activity_fourText" />
                </LinearLayout>

                <com.bwf.aiyiqi.view.MyGridView
                    android:id="@id/home_four_gridview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="3"
                    android:scrollbars="none" />
            </LinearLayout>
        </ScrollView>
    </com.cjj.MaterialRefreshLayout>
</LinearLayout>